# terraform-databricks

./: .gitignore  pyproject.toml  spark_init.py
infra/: .terraform.lock.hcl  main.tf  variables.tf
src/my_project/: test01.py
